--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.61",
-    "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "vite build && tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,7 +44,13 @@
   "main": "index.js",
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
-    "tailwindcss": "^3.3.5"
+    "@types/react": "^18.2.37",
+    "react": "^18.2.0",
+    "tailwindcss": "^3.3.5",
+    "vite": "^4.0.4"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
   },
   "author": "Edem Ekeng",
   "license": "ISC"
