--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.2.37",
+    "typescript": "^4.9.4",
     "react": "^18.2.0",
     "tailwindcss": "^3.3.5",
     "vite": "^4.0.4"
