--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@doamenelz/rx-ui",
-  "version": "0.1.1",
-  "private": true,
+  "version": "0.1.2",
+  "private": false,
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/jest-dom": "^5.17.0",
